# hoshi

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  PKGBUILD  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml  release.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/.vitepress/theme/components/: landing.vue
docs/.vitepress/theme/layouts/: layout.vue
docs/extensions/: extension-manifest.md  getting-started.md  sandbox.md
docs/extensions/types/: anime.md  common.md  manga.md  novel.md
docs/guide/: faq.md  introduction.md  upcoming.md
hoshi-app/: Cargo.toml  tauri.conf.json
hoshi-app/capabilities/: default.json  headless.json
hoshi-app/icons/: icon.icns
hoshi-app/src/: headless.rs  headless_plugin.rs  headless_sync.rs  lib.rs  main.rs  proxy_protocol.rs
hoshi-app/src/commands/: auth.rs  backups.rs  booru.rs  collections.rs  config.rs  content.rs  discord.rs  extensions.rs  i18n.rs  intergations.rs  list.rs  logs.rs  mod.rs  progress.rs  proxy.rs  schedule.rs  users.rs  watchparty.rs
hoshi-app/src/headless/: headless.rs  headless_plugin.rs  headless_sync.rs  mod.rs
hoshi-app/src/orientation/: mod.rs  orientation_plugin.rs
hoshi-core/: Cargo.toml
hoshi-core/schema/: 00_init.sql  01_users.sql  02_content_core.sql  02_core_metadata.sql  03_content_details.sql  03_content_units.sql  04_integrations.sql  04_trackers.sql  05_extensions.sql  05_user_library.sql  06_relations.sql  06_system.sql  07_tags.sql  08_list_entries.sql  09_boorus.sql  10_cache.sql  11_schedule.sql
hoshi-core/src/: db.rs  discord.rs  error.rs  headless.rs  lib.rs  logs.rs  paths.rs  proxy.rs  state.rs
hoshi-core/src/auth/: repository.rs  service.rs  types.rs
hoshi-core/src/backup/: repository.rs  service.rs  types.rs
hoshi-core/src/booru/: repository.rs  service.rs
hoshi-core/src/collections/: repository.rs  service.rs
hoshi-core/src/config/: mod.rs  model.rs  repository.rs  service.rs
hoshi-core/src/content/: aux_repositories.rs  extension_repository.rs  import_service.rs  mapping_service.rs  mod.rs  models.rs  repository.rs  resolver.rs  service.rs  types.rs  utils.rs
hoshi-core/src/content/repositories/: cache.rs  content.rs  content_unit.rs  extension.rs  mod.rs  relations.rs  unit.rs
hoshi-core/src/content/services/: chinese_title.rs  content.rs  content_units.rs  enrichment.rs  extensions.rs  home.rs  import.rs  mapping.rs  mod.rs  resolver.rs  search.rs
hoshi-core/src/extensions/: mod.rs  sandbox.rs  sandbox_bootstrap.js  types.rs
hoshi-core/src/extensions/base/: Anime.js  Base.js  Booru.js  Manga.js  Novel.js
hoshi-core/src/list/: repository.rs  service.rs  types.rs
hoshi-core/src/progress/: repository.rs  service.rs  types.rs
hoshi-core/src/rpc/: service.rs
hoshi-core/src/schedule/: repository.rs  service.rs  types.rs
hoshi-core/src/tracker/: mod.rs  repository.rs  service.rs  sync.rs  types.rs
hoshi-core/src/tracker/provider/: anilist.rs  kitsu.rs  mal.rs  mod.rs  simkl.rs
hoshi-core/src/users/: mod.rs  repository.rs  service.rs  types.rs
hoshi-frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
hoshi-frontend/src/: app.html
hoshi-frontend/src/lib/: auth.svelte.ts  config.svelte.ts  contentCache.svelte.ts  extensions.svelte.ts  home.svelte.ts  layoutState.svelte.ts  list.svelte.ts  search.svelte.ts  theme.svelte.ts
hoshi-frontend/src/lib/api/: client.ts  proxy.ts
hoshi-frontend/src/lib/api/auth/: auth.ts  types.ts
hoshi-frontend/src/lib/api/backups/: backups.ts  types.ts
hoshi-frontend/src/lib/api/booru/: booru.ts  types.ts
hoshi-frontend/src/lib/api/collections/: collections.ts  types.ts
hoshi-frontend/src/lib/api/config/: config.ts  types.ts
hoshi-frontend/src/lib/api/content/: content.ts  types.ts
hoshi-frontend/src/lib/api/discord/: discord.ts  types.ts
hoshi-frontend/src/lib/api/extensions/: extensions.ts  types.ts
hoshi-frontend/src/lib/api/list/: list.ts  types.ts
hoshi-frontend/src/lib/api/progress/: progress.ts  types.ts
hoshi-frontend/src/lib/api/proxy/: proxy.ts  tauri-hls-loader.ts
hoshi-frontend/src/lib/api/schedule/: types.ts  (+1 more)
hoshi-frontend/src/lib/app/: app.ts  content.svelte.ts  home.svelte.ts  list.svelte.ts  manga.svelte.ts  novel.svelte.ts  reader.svelte.ts  schedule.svelte.ts  search.svelte.ts  watch.svelte.ts
hoshi-frontend/src/lib/components/: AnimePlayer.svelte  ImportStatusBar.svelte  LanguageSelector.svelte  ListEditorButton.svelte  ListEditorModal.svelte  Player.svelte  ReaderLayout.svelte  ResponsiveSelect.svelte  TrackersTab.svelte
hoshi-frontend/src/lib/i18n/: index.svelte.ts
hoshi-frontend/src/lib/stores/: auth.svelte.ts  config.svelte.ts  extensions.svelte.ts  home.svelte.ts  i18n.svelte.ts  importStatus.svelte.ts  layout.svelte.ts  list.svelte.ts  schedule.svelte.ts  search.svelte.ts  theme.svelte.ts
hoshi-frontend/src/lib/utils/: normalize.ts
hoshi-frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
hoshi-frontend/src/routes/home/: +page.svelte
hoshi-frontend/src/routes/list/: +page.svelte
hoshi-frontend/src/routes/marketplace/: +page.svelte
hoshi-frontend/src/routes/profile/: +page.svelte
hoshi-frontend/src/routes/schedule/: +page.svelte
hoshi-frontend/src/routes/search/: +page.svelte
hoshi-frontend/src/routes/settings/: +page.svelte
hoshi-frontend/src/routes/setup/: +page.svelte
hoshi-server/: Cargo.toml
hoshi-server/src/: assets.rs  error.rs  headless.rs  main.rs  middleware.rs  router.rs  tunnel.rs
hoshi-server/src/api/: anilist.rs  auth.rs  backups.rs  booru.rs  collections.rs  config.rs  content.rs  extensions.rs  integrations.rs  list.rs  mod.rs  progress.rs  proxy.rs  rpc.rs  schedule.rs  users.rs
hoshi-watchparty/: Cargo.toml
hoshi-watchparty/src/: lib.rs  manager.rs  routes.rs  server.rs  tunnel.rs  types.rs  ws.rs
locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko-KR.json  ms.json  pl.json  pt-PT.json  ru.json  th.json  tl.json  tr.json  vi.json  zh-CN.json  zh-TW.json
(+163 files in other folders)
