[package]
name = "hoshi-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["dot-fx"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hoshii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
watchparty = ["dep:hoshi-watchparty"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hoshi-core = { path = "../hoshi-core" }
hoshi-watchparty = { path = "../hoshi-watchparty", optional = true }

tauri = { version = "2", features = [] }
anyhow = "1.0"
tracing = "0.1.44"
tokio = "1.49.0"
serde_json = "1.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
url = "2.5.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
uuid = "1.21.0"
