[package]
name = "hoshi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rquickjs = { version = "0.8", features = ["loader", "classes", "properties", "futures"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
rand = "0.8"
regex = "1.0"
bcrypt = "0.15"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.11.0"
tokio-util = "0.7.18"
discord-rich-presence = "0.2"
url = "2.5.8"
thiserror = "2.0.18"
async-trait = "0.1.89"
base64 = "0.22.1"
scraper = "0.25.0"
