[package]
name = "hoshi-core"
version = "0.1.0"
edition = "2021"

[features]
discord-rpc = ["dep:discord-rich-presence"]

[dependencies]
discord-rich-presence = { version = "1.1.0", optional = true }
rquickjs = { version = "0.8", features = ["loader", "classes", "properties", "futures", "bindgen"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
regex = "1.0"
bcrypt = "0.15"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.11.0"
url = "2.5.8"
thiserror = "2.0.18"
async-trait = "0.1.89"
base64 = "0.22.1"
scraper = "0.25.0"
libc = "0.2.182"
urlencoding = "2.1.3"
tracing-subscriber = "0.3.23"
async-recursion = "1.1.1"
