[package]
name = "hoshi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hoshi-core = { path = "../hoshi-core" }
hoshi-watchparty = { path = "../hoshi-watchparty" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Logging setup
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
rust-embed = "8.11.0"
mime_guess = "2.0.5"

thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.3"
dirs = "5.0.1"
async-trait = "0.1.89"
futures = "0.3.32"
chromiumoxide = "0.6.0"