[package]
name = "hoshi-watchparty"
version = "0.1.0"
edition = "2021"

[dependencies]
hoshi-core = { path = "../hoshi-core" }
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Web
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
bcrypt = "0.15"
regex = "1"
tracing = "0.1"